Bug - IE layout fix
This fixes the large layout issues in IE due to missing doctype.

Fixes https://github.com/18F/peace-corps-product-management/issues/338

Other changes:
- IE had black colored font on the legend of the amount form
- IE had a logo with a border around it.

--- a/peacecorps/peacecorps/static/peacecorps/css/compiled/donation.css
+++ b/peacecorps/peacecorps/static/peacecorps/css/compiled/donation.css
@@ -122,7 +122,7 @@ body {
   color: #087A7E; }
 
 .t--white {
-  color: #fff; }
+  color: #ffffff; }
 
 .t--error {
   color: #AD3737; }
@@ -372,7 +372,7 @@ p + p {
     color: #cb2a2b; }
 
 .t-link--white {
-  color: #fff; }
+  color: #ffffff; }
   .t-link--white:active {
     color: #f2f2f2; }
 
@@ -573,21 +573,21 @@ p + p {
 .banner--secondary {
   border-color: #F2EFE8;
   background-color: #087A7E;
-  color: #fff; }
+  color: #ffffff; }
 
 .banner--support {
   border-color: #F2EFE8;
   background-color: rgba(201, 65, 18, 0.75);
-  color: #fff; }
+  color: #ffffff; }
 
 .banner--neutral_ex_dark {
   border-color: #F2EFE8;
   background-color: #ADA598;
-  color: #fff; }
+  color: #ffffff; }
 
 .banner--dark_transparent {
   background-color: rgba(34, 34, 34, 0.5);
-  color: #fff; }
+  color: #ffffff; }
 
 .banner--no_line {
   border-top: none; }
@@ -690,8 +690,8 @@ p + p {
   border-top-width: 0.8em; }
 
 .bordered--white {
-  background-color: #fff;
-  border-color: #fff; }
+  background-color: #ffffff;
+  border-color: #ffffff; }
 
 /*
  * Bubble. Creates a round bubble with content in it.
@@ -728,7 +728,7 @@ p + p {
  * Example: @include rem(margin, 1rem 0 2rem);
  */
 .bubble {
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 50%;
   display: block;
   height: 0;
@@ -765,14 +765,14 @@ p + p {
 
 .bubble--primary {
   background-color: #A12122;
-  border-color: #fff;
-  color: #fff;
-  outline-color: #fff; }
+  border-color: #ffffff;
+  color: #ffffff;
+  outline-color: #ffffff; }
   .bubble--primary .bubble__content {
-    color: #fff; }
+    color: #ffffff; }
 
 .bubble--white {
-  background-color: #fff;
+  background-color: #ffffff;
   outline-color: #A12122;
   color: #A12122; }
 
@@ -796,12 +796,12 @@ p + p {
 .bubble_form--x-large {
   font-size: 20px;
   font-size: 2rem;
-  color: #fff; }
+  color: #ffffff; }
 
 .bubble_form input[type=number] {
   font-size: 20px;
   font-size: 2rem;
-  color: #fff;
+  color: #ffffff;
   border: none;
   border-bottom-width: 0.05em;
   border-bottom-style: solid;
@@ -873,14 +873,14 @@ p + p {
 
 .button--primary {
   background-color: #A12122;
-  color: #fff; }
+  color: #ffffff; }
 
 .button--secondary {
-  background-color: #fff;
+  background-color: #ffffff;
   color: #C94112; }
 
 .button--white {
-  background-color: #fff;
+  background-color: #ffffff;
   color: #A12122; }
 
 /*
@@ -1184,7 +1184,7 @@ p + p {
       padding: 0.3em; } }
   .icon--box.icon--gray {
     background-color: #aaa698;
-    color: #fff; }
+    color: #ffffff; }
 
 .icon--gray {
   color: #aaa698; }
@@ -1255,7 +1255,7 @@ p + p {
   border-bottom: none;
   border-top: none;
   background-color: rgba(201, 65, 18, 0.75);
-  color: #fff; }
+  color: #ffffff; }
 
 .full_banner--neutral {
   background-color: #F2EFE8;
@@ -1404,7 +1404,7 @@ p + p {
 
 .island--primary {
   background-color: #A12122;
-  color: #fff; }
+  color: #ffffff; }
 
 /*
  * Isolate
@@ -1572,7 +1572,7 @@ p + p {
   position: absolute;
   width: 80px;
   height: 80px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 50%;
   margin-left: 18px;
   margin-top: 18px;
@@ -1730,7 +1730,7 @@ p + p {
       padding-right: 1em; } }
 
 .section--white {
-  background-color: #fff; }
+  background-color: #ffffff; }
 
 .section--neutral_dark {
   background-color: #E5E1D4;
@@ -1809,7 +1809,7 @@ p + p {
   padding-left: 0.75em; }
 
 .separator--white {
-  border-color: #fff; }
+  border-color: #ffffff; }
 
 @media screen and (min-width: 0px) and (max-width: 499px)  {
   .separator--hide_sm {
@@ -2174,11 +2174,18 @@ h1 + .text-block, h2 + .text-block, h3 + .text-block, h4 + .text-block {
     vertical-align: baseline; }
 
 .logo__img {
-  margin-right: 0.5em;
-  width: 6em; }
-  @media screen and (min-width: 0px) and (max-width: 499px)  {
-    .logo__img {
-      vertical-align: top; } }
+  border: 0;
+  outline: 0;
+  text-decoration: none; }
+  .logo__img img {
+    border: 0;
+    margin-right: 0.5em;
+    outline: 0;
+    text-decoration: none;
+    width: 6em; }
+    @media screen and (min-width: 0px) and (max-width: 499px)  {
+      .logo__img img {
+        vertical-align: top; } }
 
 /*
  * Breakpoint specific classes, to do things, such as hide, at specific
