--- a/peacecorps/peacecorps/static/peacecorps/css/src/_globals.scss
+++ b/peacecorps/peacecorps/static/peacecorps/css/src/_globals.scss
@@ -11,7 +11,7 @@ $fa-font-path: '../../../../fonts/' !default;
  * Color
  */
 $black: #222;
-$white: #fff;
+$white: #ffffff;
 $gray-1: #aaa698;
 $gray-2: #555;
 $primary: #A12122; // Darkish red
